feat: Complete AWS DevOps infrastructure automation setup
🎯 Core Features:
- Comprehensive Terraform infrastructure (VPC, ECS, S3, CloudFront)
- S3 lifecycle optimization for cost savings
- Multi-environment deployment (dev/staging/prod)
- Complete GitHub Actions CI/CD workflows

🚀 GitHub Actions:
- Automated deployment on merge to main
- PR validation with security scanning (tfsec)
- Cost estimation with Infracost
- Manual deployment controls for all environments
- Artifact management and deployment verification

📚 Documentation:
- Complete setup guides and troubleshooting
- Architecture documentation and deployment options
- Cost optimization guides
- Production configuration recommendations

🔧 Infrastructure:
- ECS Fargate with auto-scaling
- CloudFront CDN with SSL certificates
- S3 with intelligent lifecycle transitions
- VPC with public/private subnet architecture
- Route53 DNS management

Ready for production deployment! 🎉

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,14 @@ packer_cache/
 # Backup files
 *.backup
 backups/
+
+# Project artifacts
+*.tar.gz
+*.zip
+*.tar
+aws-devops-complete.tar.gz
+REQUIRED_SECRETS.md
+
+# Terraform plan files
+tfplan-*
+*.tfplan
