--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "apps/ai-nexus-workbench"]
-	path = apps/ai-nexus-workbench
-	url = https://github.com/iamdrewfortini/ai-nexus-workbench.git
+[submodule "apps/diatonic-ai-workbench"]
+	path = apps/diatonic-ai-workbench
+	url = https://github.com/Diatonic-AI/diatonic-ai-workbench.git
 	branch = main
 	update = none
